Ubacena GUI konzola